cmake_minimum_required(VERSION 3.26)
project(Template)

set(CMAKE_CXX_STANDARD 21)

add_executable(Template
        segment_tree_max.cpp
        "../2501~3000/2713. Maximum Strictly Increasing Cells in a Matrix/main.cpp"
        "../2501~3000/2713. Maximum Strictly Increasing Cells in a Matrix/main2.cpp")
